--- a/webpack-mpa/src/pages/intersection/style.less
+++ b/webpack-mpa/src/pages/intersection/style.less
@@ -19,4 +19,20 @@
   .d {
     background-color: blue;
   }
+
+  .e {
+    background-color: lightblue;
+  }
+
+  .button-1,
+  .button-2 {
+    padding: 4px 12px;
+    position: fixed;
+    bottom: 30px;
+    left: 30px;
+  }
+
+  .button-2 {
+    left: 150px;
+  }
 }
