--- a/webpack-mpa/src/pages/misc/style.less
+++ b/webpack-mpa/src/pages/misc/style.less
@@ -1,15 +1,11 @@
 .misc-page {
-  overflow: hidden;
-
-  .slides-wrapper {
+  .swiper-wrapper{
     width: 1656px;
-    display: flex;
-    transition: transform 0.5s;
-    
-    .slide-item {
-      display: block;
-      width: 100vw;
-      height: 400px;
-    }
+  }
+
+  .swiper-slide {
+    display: block;
+    width: 100vw;
+    height: 400px;
   }
 }
