--- a/webpack-mpa/templates/index.ejs
+++ b/webpack-mpa/templates/index.ejs
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
-  <title>Document</title>
-</head>
-<body>
-  <div id="root"></div>
-  <%- include ./partial/react.ejs %>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover"
+    />
+    <title>Document</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <button onclick="onClick()">hot reload</button>
+    <%- include ./partial/react.ejs %>
+    <script>
+      function onClick() {
+        const scriptEl = document.createElement('script');
+        scriptEl.setAttribute('src', 'http://localhost:4000/misc/hot-update');
+        document.documentElement.appendChild(scriptEl);
+
+        setTimeout(() => {
+          ReactDOM.render(
+            React.createElement(
+              'div',
+              null,
+              React.createElement('h1', null, 'misc page'),
+              React.createElement(Sub, null)
+            ),
+            document.getElementById('root')
+          );
+        }, 1000);
+      }
+    </script>
+  </body>
 </html>
