--- a/webpack-mpa/templates/index.ejs
+++ b/webpack-mpa/templates/index.ejs
@@ -10,26 +10,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <button onclick="onClick()">hot reload</button>
+    <!-- <button onclick="onClick()">hot reload</button> -->
     <%- include ./partial/react.ejs %>
-    <script>
-      function onClick() {
-        const scriptEl = document.createElement('script');
-        scriptEl.setAttribute('src', 'http://localhost:4000/misc/hot-update');
-        document.documentElement.appendChild(scriptEl);
-
-        setTimeout(() => {
-          ReactDOM.render(
-            React.createElement(
-              'div',
-              null,
-              React.createElement('h1', null, 'misc page'),
-              React.createElement(Sub, null)
-            ),
-            document.getElementById('root')
-          );
-        }, 1000);
-      }
-    </script>
-  </body>
-</html>
+    <!-- <%- include ./partial/hot-reload.ejs %> -->
+  <html>
