--- a/umi-3.x/src/pages/index.less
+++ b/umi-3.x/src/pages/index.less
@@ -1,3 +1,9 @@
+.page {
+  padding: 200px;
+}
+
 .title {
-  background: rgb(121, 242, 157);
+  width: 200px;
+  padding: 8px;
+  border: #abc solid 1px;
 }
