--- a/umi-4/src/pages/Home/index.less
+++ b/umi-4/src/pages/Home/index.less
@@ -1,14 +1,9 @@
 .home {
   padding: 20px;
 
-  .container {
-    display: flex;
-    flex-wrap: wrap;
-
-    .svg {
+    .icon {
       display: block;
       width: 80px;
       height: 80px;
     }
-  }
 }
